syntax = "proto3";

option go_package = "github.com/celer-network/sgn-v2/x/validator/types";

// --------------- states ----------------

enum ValidatorStatus {
    Null = 0;
    Unbonded = 1;
    Unbonding = 2;
    Bonded = 3;
}

message Validator {
    string eth_address = 1;
    string eth_signer = 2;
    ValidatorStatus status = 3;
    string sgn_address = 4;
    repeated string transactors = 5;
    string tokens = 6;
    string shares = 7;
    uint64 commission_rate = 8;
    Description description = 9;
}

message Description {
    string moniker = 1;
    string identity = 2;
    string website = 3;
    string security_contact = 4;
    string details = 5;
}

message Delegator {
    string val_address = 1;
    string del_address = 2;
    string shares = 3;
}

message Syncer {
    uint64 val_index = 1;
    string sgn_address = 2;
}

message Params {
    uint64 syncer_duration = 1;
    uint64 epoch_length = 2;
    uint64 max_validator_diff = 3;
}

// --------------- tx messages ----------------

message MsgSetTransactors {
    repeated string transactors = 1;
    string sender = 2;
}

message MsgEditDescription {
    string eth_address = 1;
    Description description = 2;
    string sender = 3;
}

// --------------- genesis ----------------

message GenesisState {
    Params params = 1;
    Syncer syncer = 2;
    repeated Validator validators = 3;
    repeated Delegator delegators = 4;
}